--- a/app/views/apartments/form.html.erb
+++ b/app/views/apartments/form.html.erb
@@ -11,6 +11,7 @@
 	    </div>
 	  <% end %>
 
+	<h1>This is the form </h1>
 	  <div class="field">
 	    <%= form.label :street %>
 	    <%= form.text_field :street %>
