--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,9 @@
+
 <%= react_component("App", {
-    # logged_in: user_signed_in?,
-    # sign_in_route: new_user_session_path,
-    # sign_out_route: destroy_user_session_path
+    logged_in: user_signed_in?,
+    sign_in_route: new_user_session_path,
+    sign_out_route: destroy_user_session_path,
+    # apartment_show: apartment_path
+    new_apt_route: new_apartment_path
 }) 
 %>
