--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,7 @@
     sign_in_route: new_user_session_path,
     sign_out_route: destroy_user_session_path,
     # apartment_show: apartment_path
-    new_apt_route: new_apartment_path
+    new_apt_route: new_apartment_path,
+    apts_route: apartments_path
 }) 
 %>
