--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>AlternateApartments</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +11,8 @@
   </head>
 
   <body>
+      <p class="notice"><%= notice %></p>       
+      <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
