delete works, edit needs work

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,9 +3,9 @@
     logged_in: user_signed_in?,
     sign_in_route: new_user_session_path,
     sign_out_route: destroy_user_session_path,
-    # apartment_show: apartment_path
+    apts_route: apartments_path
+    # apartment_show: apartment_path,
     # new_apt_route: new_apartment_path,
-    apts_route: apartments_path,
     # edit_apt_route: edit_apartment_path
 }) 
 %>
